k8s/gateway/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: microapps
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: LoadBalancer
